# WC-L

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  router.py
app/api/routes/: __init__.py  admin.py  auth.py  health.py
app/core/: __init__.py  config.py  security.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  password_reset_token.py  user.py
app/schemas/: __init__.py  admin.py  auth.py
app/services/: admin.py  auth.py  email.py
frontend/: README.md  index.html
frontend/static/css/: fantasy.css
frontend/static/js/: app.js
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_user_table.py  0002_add_last_login_at_to_users.py  0003_add_is_admin_to_users.py  0004_replace_status_with_is_banned.py  0008_add_password_reset_tokens_table.py  0009_add_login_lock_to_users.py
scripts/: create_admin.py  delete_non_admin_users.py
tests/: conftest.py  test_admin.py  test_auth.py  test_health.py
